# litsearch

./: .gitignore  CLAUDE.md  README.md  litsearch.toml  litsearch_report_2026-06-30.html  pyproject.toml
src/litsearch/: __init__.py  cli.py  config.py  pubmed.py  report.py  scoring.py
tests/: test_core.py
