[project]
name = "litsearch"
version = "0.1.0"
description = "Personalised literature search with relevance scoring — PubMed + Semantic Scholar, keyword + author profiles, daily HTML reports."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Crowley", email = "crowley@example.com" }
]
keywords = ["pubmed", "literature", "search", "academic", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "httpx>=0.27",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0"]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
litsearch = "litsearch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/litsearch"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
